refactor & improve role management
