# config/routes.rb
@@ -120,7 +120,6 @@ Rails.application.routes.draw do
 
     # ===== USERS =====
     get "users/current", to: "users#read_current_user"
-    get "users/current/iam", to: "users#read_current_iam"
     put "users/current", to: "users#update_current_user"
 
     # ===== ADMIN API =====
@@ -260,6 +259,7 @@ Rails.application.routes.draw do
       resources :users, only: [] do
         resources :roles,
           only: %i[index create destroy],
+          param: :role_id,
           controller: "user_roles"
       end
     end
